[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "PyneStrap"
version = "0.0.1"
authors = [
  { name="dshaw0004", email="dipankarshaw692+pypi@gmail.com" },
]
description = "A component library for Pynecone"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dshaw0004/PyneStrap"
"Bug Tracker" = "https://github.com/dshaw0004/PyneStrap/issues"